optimizations: remembering that a name is not a field, and luajava.method for explicit caching